--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
             <div id="Home" class="mx-5 md:mx-0 text-white h-[600px] md:h-screen md:h-screen text-center flex flex-col gap-5 md:gap-[50px] items-center justify-evenly md:justify-center" >
                 <div class="mt-[80px]">
                     <h1 class=" text-[60px]/[60px] md:text-[90px] font-bold">The AI Email Writer</h1>
-                    <p class="mt-2 text-[14px] md:text-lg md:w-[50rem]">
+                    <p class="md:mt-5 text-[14px] md:text-lg md:w-[50rem]">
                         MailGuy is your go-to assistant for crafting perfect emails powered by the Google Gemini API.
                         Just fill out the simple form, provide the necessary details 
                         and MailGuy will generate a polished email for you in seconds with a single click.
@@ -85,25 +85,37 @@
                 <div class=" py-5  flex flex-col items-center justify-center gap-5 ">
                 <h1 class="mt-[80px] md:mt-0 text-6xl md:text-7xl text-center font-bold">Fill the Form</h1>
                 <form id="queryForms" action="/submit" method="POST" class="mt-10 flex flex-col items-center gap-2">
-                    <div class="grid md:grid-cols-[minmax(400px,_1fr)_minmax(400px,_1fr)] gap-10 mb-10 text-center justify-center items-center ">
+                    <div class="grid md:grid-flow-col md:grid-rows-[100px_100px_100px_100px] md:grid-cols-[minmax(400px,_1fr)_minmax(400px,_1fr)] gap-6 mb-10 text-center justify-center items-center ">
+                        <!-- Who's writing ? -->
+                         <!-- Parent/Employee/Student -->
+                         <div class="order-first flex md:flex-row flex-col items-center justify-center">
+                            <label for="user" class="font-bold text-md md:text-lg md:basis-[150px]">Who's writing ?</label>
+                            <div class="flex flex-col gap-2 md:basis-[250px]">
+                                <select id="user" class="border rounded-lg py-3 px-3 bg-black border-indigo-600 placeholder-white-500 text-white" name="user" form="queryForms">
+                                    <option value="student">Student</option>
+                                    <option value="parent">Parent</option>
+                                    <option value="employee">Employee</option>
+                                </select>
+                            </div>
+                        </div>   
                         <div class="flex md:flex-row flex-col items-center justify-center">
-                            <label for="studentname" class="font-bold text-md md:text-lg md:basis-[150px]">Name</label>
-                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white " type="text" id="sname" name="studentname">  
+                            <label for="name" class="font-bold text-md md:text-lg md:basis-[150px]">Name</label>
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white " type="text" id="sname" name="name">  
                         </div>
                         <div class="flex md:flex-row flex-col items-center justify-center">
-                            <label for="studentdetails" class="font-bold text-md md:text-lg md:basis-[150px]">Details<br>(Optional)</label>
-                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="studentdetails" placeholder="[RegNo/Class/Department]">
+                            <label for="details" class="font-bold text-md md:text-lg md:basis-[150px]">Details<br>(Optional)</label>
+                            <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="sdetails" name="details" placeholder="[RegNo/Class/Department]">
                         </div>
                         <div class="flex md:flex-row flex-col items-center justify-center"> 
                             <label for="parentname" class="font-bold text-md md:text-lg md:basis-[150px]">Parent Name<br>(Optional)</label>
                             <input class="border rounded-lg p-1 md:py-3 md:px-3 mt-4 bg-black border-indigo-600 placeholder-white-500 text-white h-min" type="text" id="pname" name="parentname">    
                         </div>
-                        <div class="flex md:flex-row flex-col items-center justify-center">
+                        <div class=" flex md:flex-row flex-col items-center justify-center">
                             <label for="reason" class="font-bold text-md md:text-lg md:basis-[150px]">Reason</label>
                             <div class="flex flex-col gap-2 md:basis-[250px]">
                                 <select id="reason" class="border rounded-lg py-3 px-3 bg-black border-indigo-600 placeholder-white-500 text-white" name="reason" form="queryForms">
                                     <option value="" class="">Select a Reason</option>
-                                    <option value="medicallbg-[conic-gradient(at_bottom_right,_var(--tw-gradient-stops))] from-[#1d4ed8] via-[#1e40af] to-[#111827]eave">Medical Leave</option>
+                                    <option value="medicalleave">Medical Leave</option>
                                     <option value="personalreasons">Personal Reasons</option>
                                     <option value="eventparticipation">Event Participation</option>
                                     <option value="others">Others</option>
